hphp/hack/test/typecheck/using/using_bad_syntax.php.exp
File "using_bad_syntax.php", line 15, characters 5-29:
Using statement in function scoped form may only be used at the top level of a function or a method (Parsing[1002])
